<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Simple Break-even Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="help">Help</string>
    <string name="shareit">Share it</string>
    <string name="aboutus">About</string>
    <string name="calcdesc">Calculate</string>
    <string name="logodesc">Matter of BIZ logo</string>
    <string name="helpdesc">Help</string>
    <string name="company"></string>
    <string name="helptext">
        Business Research &amp; Applications Limited \u00A9 2014\nLicensed under the Apache License, Version 2.0 (the "License"). You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\n\n
        This software makes use of the AndroiPlot libraries, licensed under the License.\n\n
    </string>
    <string name="helpok">OK</string>
    <string name="fixedcosts">Fixed costs</string>
    <string name="defaultFC">100</string>
    <string name="variablecosts">Variable cost</string>
    <string name="defaultVC">2</string>
    <string name="price">Unit price</string>
    <string name="defaultUP">4</string>
    <string name="calcsimple">Calculate</string>
    <string name="breakeven">Break-even:\nSales     :</string>
    <string name="otherapps">Our other apps</string>

</resources>
